Automatic jtreg test declarations clean up